--- a/templates/index.html
+++ b/templates/index.html
@@ -33,15 +33,22 @@
 </header>
 
 <!-- HERO SECTION -->
-<section class="hero" style="background-image: url('/static/Background.jpg'); background-size: cover; background-position: center; height: 100vh; display: flex; align-items: center; justify-content: center;" data-aos="fade-down" data-aos-duration="1000">
-    <div class="hero-text">
-        <h2 data-aos="fade-up" data-aos-delay="200">Hi, I'm <span>Sanjay</span></h2>
-        <div class="hero-buttons" data-aos="fade-up" data-aos-delay="400">
-            <a href="https://github.com/Sanjay20057" target="_blank" class="btn hero-btn">Visit GitHub</a>
-            <a href="https://www.linkedin.com" target="_blank" class="btn hero-btn linkedin-btn">LinkedIn Profile</a>
+<section class="hero" style="background-image: url('/static/Background.jpg');">
+    <div class="hero-container">
+        <h2>Hi, I'm <span>Sanjay</span></h2>
+
+        <p class="hero-subtitle">
+            Data Science Graduate | Python, SQL, ML | Builds Real-Time Recommendation Systems & Interactive Dashboards
+        </p>
+
+        <div class="hero-buttons">
+            <a href="https://github.com/Sanjay20057" target="_blank" class="btn">GitHub</a>
+            <a href="https://www.linkedin.com/in/sanjay-sharma-"
+               target="_blank" class="btn">LinkedIn</a>
         </div>
     </div>
 </section>
+
 
 
     <!-- ABOUT -->
