--- a/templates/index.html
+++ b/templates/index.html
@@ -130,6 +130,7 @@
             <h3>Spotify Real-Time Recommendation System</h3>
             <p>A real-time music search & recommendation system with Spotify-styled UI and artist insights.</p>
             <a href="https://github.com/Sanjay20057/Spotify-Recommendation-System-Real-Time" target="_blank" class="btn project-btn">View Code</a>
+            <a href="/static/videos/Recording.mp4" target="_blank" class="btn project-btn">View Running App Video</a>
         </div>
     </div>
 
@@ -141,6 +142,7 @@
             <h3>IPL Data Analysis Dashboard</h3>
             <p>12-season cricket analysis dashboard using Pandas + Matplotlib.</p>
             <a href="https://github.com/Sanjay20057/IPL_Analysis" target="_blank" class="btn project-btn">View Code</a>
+            <a href="https://iplanalysis2008-2019.streamlit.app" target="_blank" class="btn project-btn">View Deployed App</a>
         </div>
     </div>
 
@@ -152,6 +154,7 @@
             <h3>Movie Recommendation System</h3>
             <p>Content-based movie recommendation system using TF-IDF & cosine similarity.</p>
             <a href="https://github.com/Sanjay20057/Movie-Recommender-System" target="_blank" class="btn project-btn">View Code</a>
+            <a href="https://movie-recommender-system-2005.streamlit.app" target="_blank" class="btn project-btn">View Deployed App</a>
         </div>
     </div>
 
@@ -163,6 +166,7 @@
             <h3>Used Car Price Prediction</h3>
             <p>ML regression model to predict car prices using feature engineering.</p>
             <a href="https://github.com/Sanjay20057/Car-Price-Prediction" target="_blank" class="btn project-btn">View Code</a>
+            <a href="https://car-price-prediction-2005.streamlit.app" target="_blank" class="btn project-btn">View Deployed App</a>
         </div>
     </div>
 
@@ -197,4 +201,3 @@
     </script>
 </body>
 </html>
-
