--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
             <h3>Spotify Real-Time Recommendation System</h3>
             <p>A real-time music search & recommendation system with Spotify-styled UI and artist insights.</p>
             <a href="https://github.com/Sanjay20057/Spotify-Recommendation-System-Real-Time" target="_blank" class="btn project-btn">View Code</a>
-            <a href="/static/videos/Recording.mp4" target="_blank" class="btn project-btn">View Running App Video</a>
+            <a href="https://raw.githubusercontent.com/Sanjay20057/Portfolio/main/videos/yourvideo.mp4" target="_blank" class="btn project-btn">View Running App Video</a>
         </div>
     </div>
 
@@ -201,3 +201,4 @@
     </script>
 </body>
 </html>
+
